Updated with IntentsUI and INVocabulary

--- a/#20 SiriKit Challenge/Code/SupportMe/SiriIntentUI/Info.plist
+++ b/#20 SiriKit Challenge/Code/SupportMe/SiriIntentUI/Info.plist
@@ -27,6 +27,8 @@
 			<key>IntentsSupported</key>
 			<array>
 				<string>INStartWorkoutIntent</string>
+				<string>INSendMessageIntent</string>
+				<string>INSearchForMessagesIntent</string>
 			</array>
 		</dict>
 		<key>NSExtensionMainStoryboard</key>
